Fix broken UI in user dashboard - Rename UI tags

--- a/app/assets/stylesheets/kiitos/modules/user_dashboard.css.scss
+++ b/app/assets/stylesheets/kiitos/modules/user_dashboard.css.scss
@@ -100,7 +100,7 @@
     }
     .which {
       display: inline-block;
-      margin: 12px 0 0 24px; 
+      margin: 12px 0 0 24px;
       p {
         display: inline;
         font-size: 1.8em;
@@ -137,13 +137,13 @@
       float: right;
       margin-left: 9px;
     }
-    .who {
+    .whom {
       width: 315px;
       float: left;
       p {
         font-family: 'Oswald';
         font-size: 1.8em;
-        margin: 11px 10px 0px 101px;
+        margin: 11px 10px 0px 85px;
         text-transform: uppercase;
         float: left;
       }
@@ -152,7 +152,7 @@
         margin: 23px 20px 0 0;
       }
     }
-    .who-selection {
+    .whom-selection {
       background: #fafafa;
       height: 101px;
       left: 0;
